# COSC_352_SPRING_2026

gulam_uddin/project06/screenshots/: placeholder.txt
gulam_uddin/project08/: .gitattributes  .gitignore  Cargo.toml  README.md
gulam_uddin/project08/data/: gun_offenders.csv
gulam_uddin/project08/reports/: correlation.txt  gun_offenders.profile.json  gun_offenders.profile.txt  housing_permits.profile.json  housing_permits.profile.txt
gulam_uddin/project08/src/: analyzer.rs  error.rs  lib.rs  profile.rs  reader.rs  report.rs  types.rs
