[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"
authors = ["Gulam"]
description = "A streaming CSV profiling and correlation tool written in Rust"
license = "MIT"

[lib]
name = "csvprof"
path = "src/lib.rs"

[[bin]]
name = "csvprof"
path = "src/bin/csvprof.rs"

[[bin]]
name = "baltimore"
path = "src/bin/baltimore.rs"

[dependencies]
clap            = { version = "4.5",  features = ["derive", "cargo"] }
csv             = "1.3"
serde           = { version = "1.0",  features = ["derive"] }
serde_json      = "1.0"
thiserror       = "1.0"
chrono          = { version = "0.4",  features = ["serde"] }
comfy-table     = "7.1"
colored         = "2.1"

[profile.release]
opt-level = 3
lto       = "thin"
